parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    FALSE
    THEN
    TRUE

Grammar

Rule 0     S' -> main_block_sequence
Rule 1     main_block_sequence -> main_block main_block_sequence
Rule 2     main_block_sequence -> main_block
Rule 3     main_block -> constant_declaration
Rule 4     main_block -> variable_declaration
Rule 5     main_block -> var_const_update
Rule 6     main_block -> function_declaration
Rule 7     main_block -> <empty>
Rule 8     constant_declaration -> VAL ID COLON types ASSIGN expression SEMICOLON
Rule 9     variable_declaration -> VAR ID COLON types ASSIGN expression SEMICOLON
Rule 10    var_const_update -> ID ASSIGN expression SEMICOLON
Rule 11    function_declaration -> FUNCTION ID LPAREN function_param_list RPAREN COLON types SEMICOLON
Rule 12    function_declaration -> FUNCTION ID LPAREN function_param_list RPAREN COLON types LBRACE function_body RBRACE
Rule 13    function_param_list -> parameter COMMA function_param_list
Rule 14    function_param_list -> parameter
Rule 15    parameter -> VAL ID COLON types
Rule 16    parameter -> VAR ID COLON types
Rule 17    function_call -> ID LPAREN function_param_list_call RPAREN
Rule 18    function_param_list_call -> expression COMMA function_param_list_call
Rule 19    function_param_list_call -> expression
Rule 20    function_body -> block_sequence
Rule 21    block_sequence -> block block_sequence
Rule 22    block_sequence -> block
Rule 23    block -> constant_declaration
Rule 24    block -> variable_declaration
Rule 25    block -> var_const_update
Rule 26    block -> if_block
Rule 27    block -> while_block
Rule 28    block -> function_call SEMICOLON
Rule 29    if_block -> IF expression LBRACE block_sequence RBRACE ELSE LBRACE block_sequence RBRACE
Rule 30    if_block -> IF expression LBRACE block_sequence RBRACE
Rule 31    while_block -> WHILE expression LBRACE block_sequence RBRACE
Rule 32    types -> defaulttype
Rule 33    types -> arraytype
Rule 34    defaulttype -> INT_TYPE
Rule 35    defaulttype -> FLOAT_TYPE
Rule 36    defaulttype -> STRING_TYPE
Rule 37    defaulttype -> BOOL_TYPE
Rule 38    defaulttype -> VOID_TYPE
Rule 39    arraytype -> LSQUARE arraytype RSQUARE
Rule 40    arraytype -> defaulttype
Rule 41    typeliterals -> INTEGER_LITERAL
Rule 42    typeliterals -> FLOAT_LITERAL
Rule 43    typeliterals -> STRING_LITERAL
Rule 44    typeliterals -> BOOL_LITERAL
Rule 45    arrayliterals -> LSQUARE array_values RSQUARE
Rule 46    array_values -> array_values COMMA expression
Rule 47    array_values -> expression
Rule 48    expression -> expression PLUS expression
Rule 49    expression -> expression MINUS expression
Rule 50    expression -> expression TIMES expression
Rule 51    expression -> expression DIVIDE expression
Rule 52    expression -> expression MOD expression
Rule 53    expression -> expression POWER expression
Rule 54    expression -> expression EQUAL expression
Rule 55    expression -> expression NOT_EQUAL expression
Rule 56    expression -> expression GREATER_THAN expression
Rule 57    expression -> expression GREATER_THAN_EQUAL expression
Rule 58    expression -> expression LESS_THAN expression
Rule 59    expression -> expression LESS_THAN_EQUAL expression
Rule 60    expression -> expression AND expression
Rule 61    expression -> expression OR expression
Rule 62    expression -> NOT expression
Rule 63    expression -> typeliterals
Rule 64    expression -> arrayliterals
Rule 65    expression -> function_call
Rule 66    expression -> ID
Rule 67    expression -> LPAREN expression RPAREN

Terminals, with rules where they appear

AND                  : 60
ASSIGN               : 8 9 10
BOOL_LITERAL         : 44
BOOL_TYPE            : 37
COLON                : 8 9 11 12 15 16
COMMA                : 13 18 46
COMMENT              : 
DIVIDE               : 51
ELSE                 : 29
EQUAL                : 54
FALSE                : 
FLOAT_LITERAL        : 42
FLOAT_TYPE           : 35
FUNCTION             : 11 12
GREATER_THAN         : 56
GREATER_THAN_EQUAL   : 57
ID                   : 8 9 10 11 12 15 16 17 66
IF                   : 29 30
INTEGER_LITERAL      : 41
INT_TYPE             : 34
LBRACE               : 12 29 29 30 31
LESS_THAN            : 58
LESS_THAN_EQUAL      : 59
LPAREN               : 11 12 17 67
LSQUARE              : 39 45
MINUS                : 49
MOD                  : 52
NOT                  : 62
NOT_EQUAL            : 55
OR                   : 61
PLUS                 : 48
POWER                : 53
RBRACE               : 12 29 29 30 31
RPAREN               : 11 12 17 67
RSQUARE              : 39 45
SEMICOLON            : 8 9 10 11 28
STRING_LITERAL       : 43
STRING_TYPE          : 36
THEN                 : 
TIMES                : 50
TRUE                 : 
VAL                  : 8 15
VAR                  : 9 16
VOID_TYPE            : 38
WHILE                : 31
error                : 

Nonterminals, with rules where they appear

array_values         : 45 46
arrayliterals        : 64
arraytype            : 33 39
block                : 21 22
block_sequence       : 20 21 29 29 30 31
constant_declaration : 3 23
defaulttype          : 32 40
expression           : 8 9 10 18 19 29 30 31 46 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 67
function_body        : 12
function_call        : 28 65
function_declaration : 6
function_param_list  : 11 12 13
function_param_list_call : 17 18
if_block             : 26
main_block           : 1 2
main_block_sequence  : 1 0
parameter            : 13 14
typeliterals         : 63
types                : 8 9 11 12 15 16
var_const_update     : 5 25
variable_declaration : 4 24
while_block          : 27

Parsing method: LALR

state 0

    (0) S' -> . main_block_sequence
    (1) main_block_sequence -> . main_block main_block_sequence
    (2) main_block_sequence -> . main_block
    (3) main_block -> . constant_declaration
    (4) main_block -> . variable_declaration
    (5) main_block -> . var_const_update
    (6) main_block -> . function_declaration
    (7) main_block -> .
    (8) constant_declaration -> . VAL ID COLON types ASSIGN expression SEMICOLON
    (9) variable_declaration -> . VAR ID COLON types ASSIGN expression SEMICOLON
    (10) var_const_update -> . ID ASSIGN expression SEMICOLON
    (11) function_declaration -> . FUNCTION ID LPAREN function_param_list RPAREN COLON types SEMICOLON
    (12) function_declaration -> . FUNCTION ID LPAREN function_param_list RPAREN COLON types LBRACE function_body RBRACE

  ! shift/reduce conflict for VAL resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
    $end            reduce using rule 7 (main_block -> .)
    VAL             shift and go to state 7
    VAR             shift and go to state 9
    ID              shift and go to state 8
    FUNCTION        shift and go to state 10

  ! VAL             [ reduce using rule 7 (main_block -> .) ]
  ! VAR             [ reduce using rule 7 (main_block -> .) ]
  ! ID              [ reduce using rule 7 (main_block -> .) ]
  ! FUNCTION        [ reduce using rule 7 (main_block -> .) ]

    main_block_sequence            shift and go to state 1
    main_block                     shift and go to state 2
    constant_declaration           shift and go to state 3
    variable_declaration           shift and go to state 4
    var_const_update               shift and go to state 5
    function_declaration           shift and go to state 6

state 1

    (0) S' -> main_block_sequence .



state 2

    (1) main_block_sequence -> main_block . main_block_sequence
    (2) main_block_sequence -> main_block .
    (1) main_block_sequence -> . main_block main_block_sequence
    (2) main_block_sequence -> . main_block
    (3) main_block -> . constant_declaration
    (4) main_block -> . variable_declaration
    (5) main_block -> . var_const_update
    (6) main_block -> . function_declaration
    (7) main_block -> .
    (8) constant_declaration -> . VAL ID COLON types ASSIGN expression SEMICOLON
    (9) variable_declaration -> . VAR ID COLON types ASSIGN expression SEMICOLON
    (10) var_const_update -> . ID ASSIGN expression SEMICOLON
    (11) function_declaration -> . FUNCTION ID LPAREN function_param_list RPAREN COLON types SEMICOLON
    (12) function_declaration -> . FUNCTION ID LPAREN function_param_list RPAREN COLON types LBRACE function_body RBRACE

  ! reduce/reduce conflict for $end resolved using rule 2 (main_block_sequence -> main_block .)
  ! shift/reduce conflict for VAL resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
    $end            reduce using rule 2 (main_block_sequence -> main_block .)
    VAL             shift and go to state 7
    VAR             shift and go to state 9
    ID              shift and go to state 8
    FUNCTION        shift and go to state 10

  ! VAL             [ reduce using rule 7 (main_block -> .) ]
  ! VAR             [ reduce using rule 7 (main_block -> .) ]
  ! ID              [ reduce using rule 7 (main_block -> .) ]
  ! FUNCTION        [ reduce using rule 7 (main_block -> .) ]
  ! $end            [ reduce using rule 7 (main_block -> .) ]

    main_block                     shift and go to state 2
    main_block_sequence            shift and go to state 11
    constant_declaration           shift and go to state 3
    variable_declaration           shift and go to state 4
    var_const_update               shift and go to state 5
    function_declaration           shift and go to state 6

state 3

    (3) main_block -> constant_declaration .

    VAL             reduce using rule 3 (main_block -> constant_declaration .)
    VAR             reduce using rule 3 (main_block -> constant_declaration .)
    ID              reduce using rule 3 (main_block -> constant_declaration .)
    FUNCTION        reduce using rule 3 (main_block -> constant_declaration .)
    $end            reduce using rule 3 (main_block -> constant_declaration .)


state 4

    (4) main_block -> variable_declaration .

    VAL             reduce using rule 4 (main_block -> variable_declaration .)
    VAR             reduce using rule 4 (main_block -> variable_declaration .)
    ID              reduce using rule 4 (main_block -> variable_declaration .)
    FUNCTION        reduce using rule 4 (main_block -> variable_declaration .)
    $end            reduce using rule 4 (main_block -> variable_declaration .)


state 5

    (5) main_block -> var_const_update .

    VAL             reduce using rule 5 (main_block -> var_const_update .)
    VAR             reduce using rule 5 (main_block -> var_const_update .)
    ID              reduce using rule 5 (main_block -> var_const_update .)
    FUNCTION        reduce using rule 5 (main_block -> var_const_update .)
    $end            reduce using rule 5 (main_block -> var_const_update .)


state 6

    (6) main_block -> function_declaration .

    VAL             reduce using rule 6 (main_block -> function_declaration .)
    VAR             reduce using rule 6 (main_block -> function_declaration .)
    ID              reduce using rule 6 (main_block -> function_declaration .)
    FUNCTION        reduce using rule 6 (main_block -> function_declaration .)
    $end            reduce using rule 6 (main_block -> function_declaration .)


state 7

    (8) constant_declaration -> VAL . ID COLON types ASSIGN expression SEMICOLON

    ID              shift and go to state 12


state 8

    (10) var_const_update -> ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 13


state 9

    (9) variable_declaration -> VAR . ID COLON types ASSIGN expression SEMICOLON

    ID              shift and go to state 14


state 10

    (11) function_declaration -> FUNCTION . ID LPAREN function_param_list RPAREN COLON types SEMICOLON
    (12) function_declaration -> FUNCTION . ID LPAREN function_param_list RPAREN COLON types LBRACE function_body RBRACE

    ID              shift and go to state 15


state 11

    (1) main_block_sequence -> main_block main_block_sequence .

    $end            reduce using rule 1 (main_block_sequence -> main_block main_block_sequence .)


state 12

    (8) constant_declaration -> VAL ID . COLON types ASSIGN expression SEMICOLON

    COLON           shift and go to state 16


state 13

    (10) var_const_update -> ID ASSIGN . expression SEMICOLON
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression TIMES expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . expression MOD expression
    (53) expression -> . expression POWER expression
    (54) expression -> . expression EQUAL expression
    (55) expression -> . expression NOT_EQUAL expression
    (56) expression -> . expression GREATER_THAN expression
    (57) expression -> . expression GREATER_THAN_EQUAL expression
    (58) expression -> . expression LESS_THAN expression
    (59) expression -> . expression LESS_THAN_EQUAL expression
    (60) expression -> . expression AND expression
    (61) expression -> . expression OR expression
    (62) expression -> . NOT expression
    (63) expression -> . typeliterals
    (64) expression -> . arrayliterals
    (65) expression -> . function_call
    (66) expression -> . ID
    (67) expression -> . LPAREN expression RPAREN
    (41) typeliterals -> . INTEGER_LITERAL
    (42) typeliterals -> . FLOAT_LITERAL
    (43) typeliterals -> . STRING_LITERAL
    (44) typeliterals -> . BOOL_LITERAL
    (45) arrayliterals -> . LSQUARE array_values RSQUARE
    (17) function_call -> . ID LPAREN function_param_list_call RPAREN

    NOT             shift and go to state 19
    ID              shift and go to state 17
    LPAREN          shift and go to state 23
    INTEGER_LITERAL shift and go to state 24
    FLOAT_LITERAL   shift and go to state 25
    STRING_LITERAL  shift and go to state 26
    BOOL_LITERAL    shift and go to state 27
    LSQUARE         shift and go to state 28

    expression                     shift and go to state 18
    typeliterals                   shift and go to state 20
    arrayliterals                  shift and go to state 21
    function_call                  shift and go to state 22

state 14

    (9) variable_declaration -> VAR ID . COLON types ASSIGN expression SEMICOLON

    COLON           shift and go to state 29


state 15

    (11) function_declaration -> FUNCTION ID . LPAREN function_param_list RPAREN COLON types SEMICOLON
    (12) function_declaration -> FUNCTION ID . LPAREN function_param_list RPAREN COLON types LBRACE function_body RBRACE

    LPAREN          shift and go to state 30


state 16

    (8) constant_declaration -> VAL ID COLON . types ASSIGN expression SEMICOLON
    (32) types -> . defaulttype
    (33) types -> . arraytype
    (34) defaulttype -> . INT_TYPE
    (35) defaulttype -> . FLOAT_TYPE
    (36) defaulttype -> . STRING_TYPE
    (37) defaulttype -> . BOOL_TYPE
    (38) defaulttype -> . VOID_TYPE
    (39) arraytype -> . LSQUARE arraytype RSQUARE
    (40) arraytype -> . defaulttype

    INT_TYPE        shift and go to state 34
    FLOAT_TYPE      shift and go to state 35
    STRING_TYPE     shift and go to state 36
    BOOL_TYPE       shift and go to state 37
    VOID_TYPE       shift and go to state 38
    LSQUARE         shift and go to state 39

    types                          shift and go to state 31
    defaulttype                    shift and go to state 32
    arraytype                      shift and go to state 33

state 17

    (66) expression -> ID .
    (17) function_call -> ID . LPAREN function_param_list_call RPAREN

    SEMICOLON       reduce using rule 66 (expression -> ID .)
    PLUS            reduce using rule 66 (expression -> ID .)
    MINUS           reduce using rule 66 (expression -> ID .)
    TIMES           reduce using rule 66 (expression -> ID .)
    DIVIDE          reduce using rule 66 (expression -> ID .)
    MOD             reduce using rule 66 (expression -> ID .)
    POWER           reduce using rule 66 (expression -> ID .)
    EQUAL           reduce using rule 66 (expression -> ID .)
    NOT_EQUAL       reduce using rule 66 (expression -> ID .)
    GREATER_THAN    reduce using rule 66 (expression -> ID .)
    GREATER_THAN_EQUAL reduce using rule 66 (expression -> ID .)
    LESS_THAN       reduce using rule 66 (expression -> ID .)
    LESS_THAN_EQUAL reduce using rule 66 (expression -> ID .)
    AND             reduce using rule 66 (expression -> ID .)
    OR              reduce using rule 66 (expression -> ID .)
    RPAREN          reduce using rule 66 (expression -> ID .)
    RSQUARE         reduce using rule 66 (expression -> ID .)
    COMMA           reduce using rule 66 (expression -> ID .)
    LBRACE          reduce using rule 66 (expression -> ID .)
    LPAREN          shift and go to state 40


state 18

    (10) var_const_update -> ID ASSIGN expression . SEMICOLON
    (48) expression -> expression . PLUS expression
    (49) expression -> expression . MINUS expression
    (50) expression -> expression . TIMES expression
    (51) expression -> expression . DIVIDE expression
    (52) expression -> expression . MOD expression
    (53) expression -> expression . POWER expression
    (54) expression -> expression . EQUAL expression
    (55) expression -> expression . NOT_EQUAL expression
    (56) expression -> expression . GREATER_THAN expression
    (57) expression -> expression . GREATER_THAN_EQUAL expression
    (58) expression -> expression . LESS_THAN expression
    (59) expression -> expression . LESS_THAN_EQUAL expression
    (60) expression -> expression . AND expression
    (61) expression -> expression . OR expression

    SEMICOLON       shift and go to state 41
    PLUS            shift and go to state 42
    MINUS           shift and go to state 43
    TIMES           shift and go to state 44
    DIVIDE          shift and go to state 45
    MOD             shift and go to state 46
    POWER           shift and go to state 47
    EQUAL           shift and go to state 48
    NOT_EQUAL       shift and go to state 49
    GREATER_THAN    shift and go to state 50
    GREATER_THAN_EQUAL shift and go to state 51
    LESS_THAN       shift and go to state 52
    LESS_THAN_EQUAL shift and go to state 53
    AND             shift and go to state 54
    OR              shift and go to state 55


state 19

    (62) expression -> NOT . expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression TIMES expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . expression MOD expression
    (53) expression -> . expression POWER expression
    (54) expression -> . expression EQUAL expression
    (55) expression -> . expression NOT_EQUAL expression
    (56) expression -> . expression GREATER_THAN expression
    (57) expression -> . expression GREATER_THAN_EQUAL expression
    (58) expression -> . expression LESS_THAN expression
    (59) expression -> . expression LESS_THAN_EQUAL expression
    (60) expression -> . expression AND expression
    (61) expression -> . expression OR expression
    (62) expression -> . NOT expression
    (63) expression -> . typeliterals
    (64) expression -> . arrayliterals
    (65) expression -> . function_call
    (66) expression -> . ID
    (67) expression -> . LPAREN expression RPAREN
    (41) typeliterals -> . INTEGER_LITERAL
    (42) typeliterals -> . FLOAT_LITERAL
    (43) typeliterals -> . STRING_LITERAL
    (44) typeliterals -> . BOOL_LITERAL
    (45) arrayliterals -> . LSQUARE array_values RSQUARE
    (17) function_call -> . ID LPAREN function_param_list_call RPAREN

    NOT             shift and go to state 19
    ID              shift and go to state 17
    LPAREN          shift and go to state 23
    INTEGER_LITERAL shift and go to state 24
    FLOAT_LITERAL   shift and go to state 25
    STRING_LITERAL  shift and go to state 26
    BOOL_LITERAL    shift and go to state 27
    LSQUARE         shift and go to state 28

    expression                     shift and go to state 56
    typeliterals                   shift and go to state 20
    arrayliterals                  shift and go to state 21
    function_call                  shift and go to state 22

state 20

    (63) expression -> typeliterals .

    SEMICOLON       reduce using rule 63 (expression -> typeliterals .)
    PLUS            reduce using rule 63 (expression -> typeliterals .)
    MINUS           reduce using rule 63 (expression -> typeliterals .)
    TIMES           reduce using rule 63 (expression -> typeliterals .)
    DIVIDE          reduce using rule 63 (expression -> typeliterals .)
    MOD             reduce using rule 63 (expression -> typeliterals .)
    POWER           reduce using rule 63 (expression -> typeliterals .)
    EQUAL           reduce using rule 63 (expression -> typeliterals .)
    NOT_EQUAL       reduce using rule 63 (expression -> typeliterals .)
    GREATER_THAN    reduce using rule 63 (expression -> typeliterals .)
    GREATER_THAN_EQUAL reduce using rule 63 (expression -> typeliterals .)
    LESS_THAN       reduce using rule 63 (expression -> typeliterals .)
    LESS_THAN_EQUAL reduce using rule 63 (expression -> typeliterals .)
    AND             reduce using rule 63 (expression -> typeliterals .)
    OR              reduce using rule 63 (expression -> typeliterals .)
    RPAREN          reduce using rule 63 (expression -> typeliterals .)
    RSQUARE         reduce using rule 63 (expression -> typeliterals .)
    COMMA           reduce using rule 63 (expression -> typeliterals .)
    LBRACE          reduce using rule 63 (expression -> typeliterals .)


state 21

    (64) expression -> arrayliterals .

    SEMICOLON       reduce using rule 64 (expression -> arrayliterals .)
    PLUS            reduce using rule 64 (expression -> arrayliterals .)
    MINUS           reduce using rule 64 (expression -> arrayliterals .)
    TIMES           reduce using rule 64 (expression -> arrayliterals .)
    DIVIDE          reduce using rule 64 (expression -> arrayliterals .)
    MOD             reduce using rule 64 (expression -> arrayliterals .)
    POWER           reduce using rule 64 (expression -> arrayliterals .)
    EQUAL           reduce using rule 64 (expression -> arrayliterals .)
    NOT_EQUAL       reduce using rule 64 (expression -> arrayliterals .)
    GREATER_THAN    reduce using rule 64 (expression -> arrayliterals .)
    GREATER_THAN_EQUAL reduce using rule 64 (expression -> arrayliterals .)
    LESS_THAN       reduce using rule 64 (expression -> arrayliterals .)
    LESS_THAN_EQUAL reduce using rule 64 (expression -> arrayliterals .)
    AND             reduce using rule 64 (expression -> arrayliterals .)
    OR              reduce using rule 64 (expression -> arrayliterals .)
    RPAREN          reduce using rule 64 (expression -> arrayliterals .)
    RSQUARE         reduce using rule 64 (expression -> arrayliterals .)
    COMMA           reduce using rule 64 (expression -> arrayliterals .)
    LBRACE          reduce using rule 64 (expression -> arrayliterals .)


state 22

    (65) expression -> function_call .

    SEMICOLON       reduce using rule 65 (expression -> function_call .)
    PLUS            reduce using rule 65 (expression -> function_call .)
    MINUS           reduce using rule 65 (expression -> function_call .)
    TIMES           reduce using rule 65 (expression -> function_call .)
    DIVIDE          reduce using rule 65 (expression -> function_call .)
    MOD             reduce using rule 65 (expression -> function_call .)
    POWER           reduce using rule 65 (expression -> function_call .)
    EQUAL           reduce using rule 65 (expression -> function_call .)
    NOT_EQUAL       reduce using rule 65 (expression -> function_call .)
    GREATER_THAN    reduce using rule 65 (expression -> function_call .)
    GREATER_THAN_EQUAL reduce using rule 65 (expression -> function_call .)
    LESS_THAN       reduce using rule 65 (expression -> function_call .)
    LESS_THAN_EQUAL reduce using rule 65 (expression -> function_call .)
    AND             reduce using rule 65 (expression -> function_call .)
    OR              reduce using rule 65 (expression -> function_call .)
    RPAREN          reduce using rule 65 (expression -> function_call .)
    RSQUARE         reduce using rule 65 (expression -> function_call .)
    COMMA           reduce using rule 65 (expression -> function_call .)
    LBRACE          reduce using rule 65 (expression -> function_call .)


state 23

    (67) expression -> LPAREN . expression RPAREN
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression TIMES expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . expression MOD expression
    (53) expression -> . expression POWER expression
    (54) expression -> . expression EQUAL expression
    (55) expression -> . expression NOT_EQUAL expression
    (56) expression -> . expression GREATER_THAN expression
    (57) expression -> . expression GREATER_THAN_EQUAL expression
    (58) expression -> . expression LESS_THAN expression
    (59) expression -> . expression LESS_THAN_EQUAL expression
    (60) expression -> . expression AND expression
    (61) expression -> . expression OR expression
    (62) expression -> . NOT expression
    (63) expression -> . typeliterals
    (64) expression -> . arrayliterals
    (65) expression -> . function_call
    (66) expression -> . ID
    (67) expression -> . LPAREN expression RPAREN
    (41) typeliterals -> . INTEGER_LITERAL
    (42) typeliterals -> . FLOAT_LITERAL
    (43) typeliterals -> . STRING_LITERAL
    (44) typeliterals -> . BOOL_LITERAL
    (45) arrayliterals -> . LSQUARE array_values RSQUARE
    (17) function_call -> . ID LPAREN function_param_list_call RPAREN

    NOT             shift and go to state 19
    ID              shift and go to state 17
    LPAREN          shift and go to state 23
    INTEGER_LITERAL shift and go to state 24
    FLOAT_LITERAL   shift and go to state 25
    STRING_LITERAL  shift and go to state 26
    BOOL_LITERAL    shift and go to state 27
    LSQUARE         shift and go to state 28

    expression                     shift and go to state 57
    typeliterals                   shift and go to state 20
    arrayliterals                  shift and go to state 21
    function_call                  shift and go to state 22

state 24

    (41) typeliterals -> INTEGER_LITERAL .

    SEMICOLON       reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    PLUS            reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    MINUS           reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    TIMES           reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    DIVIDE          reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    MOD             reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    POWER           reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    EQUAL           reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    NOT_EQUAL       reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    GREATER_THAN    reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    GREATER_THAN_EQUAL reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    LESS_THAN       reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    LESS_THAN_EQUAL reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    AND             reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    OR              reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    RPAREN          reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    RSQUARE         reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    COMMA           reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)
    LBRACE          reduce using rule 41 (typeliterals -> INTEGER_LITERAL .)


state 25

    (42) typeliterals -> FLOAT_LITERAL .

    SEMICOLON       reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    PLUS            reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    MINUS           reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    TIMES           reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    DIVIDE          reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    MOD             reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    POWER           reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    EQUAL           reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    NOT_EQUAL       reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    GREATER_THAN    reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    GREATER_THAN_EQUAL reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    LESS_THAN       reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    LESS_THAN_EQUAL reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    AND             reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    OR              reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    RPAREN          reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    RSQUARE         reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    COMMA           reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)
    LBRACE          reduce using rule 42 (typeliterals -> FLOAT_LITERAL .)


state 26

    (43) typeliterals -> STRING_LITERAL .

    SEMICOLON       reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    PLUS            reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    MINUS           reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    TIMES           reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    DIVIDE          reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    MOD             reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    POWER           reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    EQUAL           reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    NOT_EQUAL       reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    GREATER_THAN    reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    GREATER_THAN_EQUAL reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    LESS_THAN       reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    LESS_THAN_EQUAL reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    AND             reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    OR              reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    RPAREN          reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    RSQUARE         reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    COMMA           reduce using rule 43 (typeliterals -> STRING_LITERAL .)
    LBRACE          reduce using rule 43 (typeliterals -> STRING_LITERAL .)


state 27

    (44) typeliterals -> BOOL_LITERAL .

    SEMICOLON       reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    PLUS            reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    MINUS           reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    TIMES           reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    DIVIDE          reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    MOD             reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    POWER           reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    EQUAL           reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    NOT_EQUAL       reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    GREATER_THAN    reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    GREATER_THAN_EQUAL reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    LESS_THAN       reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    LESS_THAN_EQUAL reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    AND             reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    OR              reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    RPAREN          reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    RSQUARE         reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    COMMA           reduce using rule 44 (typeliterals -> BOOL_LITERAL .)
    LBRACE          reduce using rule 44 (typeliterals -> BOOL_LITERAL .)


state 28

    (45) arrayliterals -> LSQUARE . array_values RSQUARE
    (46) array_values -> . array_values COMMA expression
    (47) array_values -> . expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression TIMES expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . expression MOD expression
    (53) expression -> . expression POWER expression
    (54) expression -> . expression EQUAL expression
    (55) expression -> . expression NOT_EQUAL expression
    (56) expression -> . expression GREATER_THAN expression
    (57) expression -> . expression GREATER_THAN_EQUAL expression
    (58) expression -> . expression LESS_THAN expression
    (59) expression -> . expression LESS_THAN_EQUAL expression
    (60) expression -> . expression AND expression
    (61) expression -> . expression OR expression
    (62) expression -> . NOT expression
    (63) expression -> . typeliterals
    (64) expression -> . arrayliterals
    (65) expression -> . function_call
    (66) expression -> . ID
    (67) expression -> . LPAREN expression RPAREN
    (41) typeliterals -> . INTEGER_LITERAL
    (42) typeliterals -> . FLOAT_LITERAL
    (43) typeliterals -> . STRING_LITERAL
    (44) typeliterals -> . BOOL_LITERAL
    (45) arrayliterals -> . LSQUARE array_values RSQUARE
    (17) function_call -> . ID LPAREN function_param_list_call RPAREN

    NOT             shift and go to state 19
    ID              shift and go to state 17
    LPAREN          shift and go to state 23
    INTEGER_LITERAL shift and go to state 24
    FLOAT_LITERAL   shift and go to state 25
    STRING_LITERAL  shift and go to state 26
    BOOL_LITERAL    shift and go to state 27
    LSQUARE         shift and go to state 28
